--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wavefunction-collapse-js",
-  "private": true,
+  "packageManager": "pnpm@9.2.0",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
