--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@knadh/oat": "^0.2.0",
+    "pinia": "^3.0.4",
+    "pinia-simple-persist": "^0.0.5",
     "vue": "^3.5.25"
   },
   "devDependencies": {
