--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^3.0.4",
     "pinia-simple-persist": "^0.0.8",
     "pixel-data-js": "^0.5.3",
+    "pretty-bytes": "^7.1.0",
     "pretty-ms": "^9.3.0",
     "tweakpane": "^4.0.5",
     "tweakpane-plugin-infodump": "^4.0.2",
