--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@vitejs/plugin-vue": "^6.0.2",
     "@vue/tsconfig": "^0.8.1",
     "sass-embedded": "^1.97.3",
+    "sharp": "^0.34.5",
     "typescript": "~5.9.3",
     "vite": "^7.3.1",
+    "vite-imagetools": "^10.0.0",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0",
     "vue-tsc": "^3.1.5"
